crates/mold_format/tests/snapshots/snapshots__case_expression.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT id, CASE
    WHEN active THEN 'yes'
    WHEN status = 'pending' THEN 'pending'
    ELSE 'no'
END AS status
  FROM users
