crates/mold_format/tests/snapshots/snapshots__create_index.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
CREATE UNIQUE INDEX CONCURRENTLY idx_users_email ON public.users USING btree(email)
WHERE active
