crates/mold_format/tests/snapshots/snapshots__create_table_as_select.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
CREATE TABLE recent AS
    SELECT id
      FROM events
     WHERE created_at > now()
