crates/mold_format/tests/snapshots/snapshots__cte.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
      WITH active_users AS ((
        SELECT id
             , name
          FROM users
         WHERE active = true
))
    SELECT *
      FROM active_users
