crates/mold_format/tests/snapshots/snapshots__delete.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
DELETE FROM users
      WHERE id = 1
  RETURNING
